# manipulator-trajopt

./: CMakeLists.txt  eigen_test.cpp  kimura.py  main.cpp  robot.cpp  robot.hpp  robot_viewer.cpp  traj_opt.cpp  traj_opt.hpp
